# C-

./: .gitignore  Average  ConfigVSCode.md  README.md  test.tex  vim.md
C++/: a.out  debugTest  helloworld  main  ods-cpp.tar  pesoIdeal
C++/DataStructures/livro/: a.out  ponteiros  ponteiros.cpp
C++/cmakefiletest/: CMakeLists.txt  cmake.md
C++/cmakefiletest/src/: main.cpp
C++/debugTest.dSYM/Contents/: Info.plist
C++/exemplos/: SequenciaFuga.cpp  agenda.cpp  calculadora  calculadora.cpp  main  mod_n.cpp  vector.cpp
C++/leetcode/1480/: main.cpp  mainWithVector.cpp
C++/leetcode/1672/: main  main.cpp  solution.cpp  solution.h  vector.md
C++/oop/: template.md
C++/oop/classPessoa/: main.cpp  pessoa.cpp  pessoa.h
C++/output/: helloworld
C++/tiposDados/: main  main.cpp
C++/ufsc/: main  stackFatorial.cpp  stackFibonacci.cpp
C++/ufsc/05_vplList03/: CMakeLists.txt  edita_texto.h  edita_textoTest.cpp  readme.md  test
C++/unitTest/: test  withGoogleTest.cpp
C-C++/: pesoIdeal  pesoIdeal.c
c/: Number Finder  hello.c  hellooo.c  helloppv.c
c/firstSteps/: formatSpecifiesType.c  hello  main
c/hello-world-with-makefile/: main  main.c  program
c/makefiletest/: hello.c  hello.h  main.c
c/notas_mentais/: FirstSteps.md  basics.md  datalake.md
c/output/: hellooo
c/syscall/: 01simpleShell.c  main  mini-shell.c
notas_mentais/: ConfigVSCode.md  basic.md  ieee754-floatingpoint.md  unit_test.md  vector.md
teste_32_hsck_tools/: CMakeLists.txt  platformio.ini
teste_32_hsck_tools/src/: attack.c  attack_handshake.c  attack_method.c  attack_pmkid.c  main.c
(+255 files in other folders)
